[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
insta = "1.29.0"
lasso = { version = "0.6.0", features = ["multi-threaded"] }
logos = "0.12.1"
once_cell = "1.17.1"
regex = "1.7.1"
rustyline = { version = "11.0.0", features = ["derive"] }
clap = { version = "4.3.0", features = ["cargo", "derive"] }